--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "next-seo": "^6.5.0"
+    "next-seo": "^6.5.0",
+    "@lottiefiles/dotlottie-react": "^0.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
