--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma db push --accept-data-loss && prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "db:push": "prisma db push",
@@ -22,7 +22,8 @@
     "@prisma/client": "^5.7.1",
     "bcryptjs": "^2.4.3",
     "next-auth": "^4.24.5",
-    "jose": "^5.1.3"
+    "jose": "^5.1.3",
+    "prisma": "^5.7.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
@@ -35,7 +36,6 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-    "prisma": "^5.7.1",
     "tsx": "^4.6.2"
   }
 }
