--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,8 @@ NEXTAUTH_URL="https://your-vercel-domain.vercel.app"
 # JWT Secret
 JWT_SECRET="your-jwt-secret-key"
 
+# Vercel Blob Storage
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_your-token-here"
+
 # Optional: For local development
 # DATABASE_URL="postgresql://username:password@localhost:5432/balloond"
