--- a/package.json
+++ b/package.json
@@ -14,28 +14,31 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "next-seo": "^6.5.0",
     "@lottiefiles/dotlottie-react": "^0.8.0",
     "@prisma/client": "^5.7.1",
+    "@vercel/blob": "^1.1.1",
     "bcryptjs": "^2.4.3",
-    "next-auth": "^4.24.5",
+    "formidable": "^3.5.1",
     "jose": "^5.1.3",
-    "prisma": "^5.7.1"
+    "next": "14.2.3",
+    "next-auth": "^4.24.5",
+    "next-seo": "^6.5.0",
+    "prisma": "^5.7.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "tsx": "^4.6.2"
+    "tsx": "^4.6.2",
+    "typescript": "^5.4.5"
   }
 }
