--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next-seo": "^6.5.0",
     "prisma": "^5.7.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-lottie-player": "^2.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
